# FeatherCNN

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build_android.sh  log
build_scripts/: Info.plist  build_all.sh  build_android.sh  build_armlinux.sh  build_armlinux_test.sh  build_ios.sh  build_linux.sh  build_linux_aarch64.sh  build_linux_avx.sh  build_linux_avx_mkldnn.sh  build_linux_mkldnn_test.sh  build_linux_test.sh  build_macos_avx.sh  build_macos_avx_mkldnn.sh  (+4 more)
src/: CMakeLists.txt  blob.cpp  blob.h  common.cpp  common.h  feather_generated.h  feather_simple_generated.h  layer.cpp  layer.h  layer_factory.cpp  layer_factory.h  layer_factory_cl.cpp  layer_factory_cl.h  layer_factory_ncnn.cpp  log.h  mempool.cpp  mempool.h  net.cpp  net.h  rt_param.h  tags  utils.cpp  utils.h
src/arm/: CMakeLists.txt  caffe_interp.cpp  common.cpp  common.h  depthwise.cpp  depthwise.h  generic_kernels.cpp  generic_kernels.h  helper.cpp  helper.h  sgeconv.cpp  sgemm.cpp  sgemm.h  sgemm_legacy.cpp  sgemv.cpp  sgemv.h  winograd_kernels.cpp  winograd_kernels.h  winograd_kernels_F63.cpp
src/booster/: CMakeLists.txt
src/booster/arm/: CMakeLists.txt  booster.cpp  caffe_interp.cpp  depthwise.cpp  generic_kernels.cpp  helper.cpp  sgeconv.cpp  sgemm.cpp  sgemm_legacy.cpp  sgemm_legacy.h  sgemv.cpp  winograd_kernels.cpp  winograd_kernels_F63.cpp
src/booster/avx/: CMakeLists.txt  booster.cpp  caffe_interp.cpp  depthwise.cpp  generic_kernels.cpp  helper.cpp  sgeconv.cpp  sgemm.cpp  sgemv.cpp  winograd_kernels_F63.cpp  winograd_kernels_F63_fused.cpp
src/booster/cl/: CMakeLists.txt  booster_cl.cpp  cl_common.cpp  cl_runtime.cpp  clhpp_runtime.cpp  libopencl.cpp  opencl_kernels.cpp  opencl_wrapper.cpp
src/booster/cl/CL_kernels/: batchnorm_buffer.cl  common.h  concatBuffer.cl  concat_buffer.cl  convBuffer16o16_1v2_grp1.cl  convBuffer4o4_1v1.cl  convBuffer4o4_1v2_grp1.cl  convBuffer8o8_1v2_grp1.cl  convBufferReformW16o16_1v1.cl  convBufferReformW16o16_1v1_grp1.cl  convBufferReformW4o4_1v1.cl  convBufferReformW4o4_1v1_grp1.cl  convBufferReformW8o8_1v1.cl  convBufferReformW8o8_1v1_grp1.cl  conv_1v1_buffer.cl  conv_1v2_buffer.cl  depthwiseConvBuffer4o4_1v1.cl  depthwiseConvBuffer4o4_1v1_grp4.cl  depthwiseConvBuffer8o8_1v1.cl  depthwiseConvBuffer8o8_1v1_grp8.cl  depthwise_conv_1v1_buffer.cl  depthwise_conv_1v2_buffer.cl  depthwise_conv_1v4_buffer.cl  elewiseBuffer16o16.cl  elewiseBuffer4o4.cl  elewiseBuffer8o8.cl  eltwise_buffer.cl  innerProductBufferReformW16o16.cl  innerProductBufferReformW16o16_grp1.cl  innerProductBufferReformW4o4.cl  innerProductBufferReformW4o4_grp1.cl  innerProductBufferReformW8o8.cl  innerProductBufferReformW8o8_grp1.cl  inner_product_buffer.cl  inputBuffer.cl  inputBufferFloat.cl  inputImage.cl  input_buffer.cl  input_image.cl  poolingBuffer4o4.cl  (+7 more)
src/booster/cl/python/tools/: cl2string.py  clfile_converter.py  clfile_converter.py___jb_old___  str2map.h.jinja2  string2cl.py
src/booster/clhpp/: CMakeLists.txt  booster_cl.cpp  clhpp_common.cpp  clhpp_runtime.cpp  half.cpp  opencl_kernels.cpp  opencl_wrapper.cpp
src/booster/clhpp/CL_kernels/: buffer_transform.cl  common.h  conv_1v1_buffer.cl  conv_1v2_buffer.cl  conv_1v4_buffer.cl  depthwise_conv_1v1_buffer.cl  eltwise_buffer.cl  inner_product_buffer.cl  inputBuffer.cl  inputBufferFloat.cl  inputImage.cl  input_buffer.cl  pooling_buffer.cl
src/booster/clhpp/python/tools/: clfile_converter.py___jb_old___  str2map.h.jinja2
src/booster/include/CL/: ._cl_dx9_media_sharing.h  cl_common.h  cl_ext.h  cl_runtime.h  cl_version.h  half.h  libopencl.h  opencl_kernels.h
src/booster/include/CLHPP/: cl.hpp  cl2.hpp  cl2_head.h  cl2_head.hpp  clhpp_common.hpp  clhpp_runtime.hpp  clhpp_tuner.hpp  opencl_wrapper.cc
src/booster/include/booster/: booster.h  caffe_interp.h  depthwise.h  generic_kernels.h  helper.h  opencl_kernels.h  power.h  sgeconv.h  sgemm.h  sgemv.h  thpool.h  winograd_kernels.h
src/flatbuffers/: base.h  flatbuffers.h  stl_emulation.h
src/fp16/: fp16.h
src/general/: CMakeLists.txt  common.cpp  common.h  depthwise.cpp  depthwise.h  generic_kernels.cpp  generic_kernels.h  power.h  sgemm.cpp  sgemm.h  sgemv.cpp  sgemv.h  winograd_kernels.cpp  winograd_kernels.h
src/layers/: .filter_layer.cpp.swp  .filter_layer.h.swp  batchnorm_layer.cpp  batchnorm_layer.h  concat_layer.cpp  concat_layer.h  conv_depthwise_layer.cpp.swp  conv_depthwise_layer.h  conv_im2col_layer.h  conv_layer.h  conv_sgeconv_layer.h  conv_winogradF63_layer.h  conv_winograd_layer.h  dropout_layer.h  eltwise_layer.h  filter_layer.cpp  filter_layer.h  flatten_layer.cpp  flatten_layer.h  inner_product_layer.h  input_layer.h  interp_layer.cpp  interp_layer.h  leaky_relu_layer.h  lrn_layer.cpp  lrn_layer.h  pooling_layer.h  pooling_layer.h_wrong  prelu_layer.cpp  prelu_layer.h  relu_layer.cpp  relu_layer.h  reshape_layer.cpp  reshape_layer.h  scale_layer.cpp  scale_layer.h  slice_layer.cpp  slice_layer.h  softmax_layer.cpp  softmax_layer.h  (+2 more)
src/layers_cl/: batchnorm_layer_cl.cpp  batchnorm_layer_cl.h  concat_layer_cl.cpp  concat_layer_cl.h  conv_layer_cl.cpp  conv_layer_cl.h  direct_conv_buffer_layer_cl.h  direct_conv_layer_cl.cpp  direct_conv_layer_cl.h  elewise_layer_cl.cpp  elewise_layer_cl.h  eltwise_layer_cl.cpp  eltwise_layer_cl.h  inner_product_layer_cl.cpp  inner_product_layer_cl.h  input_layer_cl.cpp  input_layer_cl.h  pooling_layer_cl.cpp  pooling_layer_cl.h  relu_layer_cl.cpp  relu_layer_cl.h  scale_layer_cl.cpp  scale_layer_cl.h
src/ncnn/: allocator.cpp  mat.cpp  mat.h  modelbin.cpp  paramdict.cpp  paramdict.h  platform.h
test/: CMakeLists.txt  build-NDK.sh  build.sh  install.sh  test.cpp  test_bin.cpp  test_txt.cpp
test/booster/: conv_test.cpp  utils.cpp  utils.h
test/booster/build_scripts/: build_android.sh  build_linux.sh  build_macos.sh
test/booster/jni/: Android.mk
test/booster/libs/arm64-v8a/: booster_test
test/feather/: test_bin.cpp  test_txt.cpp
test/feather/build_scripts/: build_android.sh
test/feather/jni/: Android.mk  Application.mk
test/feather/libs/arm64-v8a/: test
test/jni/: Android.mk  Application.mk
(+132 files in other folders)
